crates/aranya-policy-compiler/tests/data/facts/undefined_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
2 |     check exists Foo[] else test_fail()
  |                  ^^^ fact `Foo` not defined
